Make sure the x had a way to be closed on mobile

--- a/wp-content/themes/nail-union/assets/scss/_lawyers.scss
+++ b/wp-content/themes/nail-union/assets/scss/_lawyers.scss
@@ -142,6 +142,7 @@ body.page-template-template-representation {
 					right: 10px;
 					color: $white;
 					font-size: 35px;
+					cursor: pointer;
 
 					@include breakpoint(medium up){
 						color: $black;
