--- a/wp-content/themes/nail-union/assets/scss/_officers.scss
+++ b/wp-content/themes/nail-union/assets/scss/_officers.scss
@@ -77,6 +77,7 @@ body.page-template-template-officers {
 					right: 10px;
 					color: $white;
 					font-size: 35px;
+					cursor: pointer;
 
 					@include breakpoint(medium up){
 						color: $black;
